silence-among-us/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: silence-among-us
spec:
  replicas: 1
  selector:
    matchLabels:
      app: silence-among-us
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: silence-among-us
    spec:
      restartPolicy: Always
      containers:
        - name: silence-among-us
          image: ghcr.io/tanndev/silence-among-us:2.6.3
          ports:
            - containerPort: 8080
              protocol: TCP
              name: http
        - name: couchdb
          image: couchdb:3.1
          volumeMounts:
            - name: data
              mountPath: /opt/couchdb/data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: silence-among-us
