silence-among-us/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: silence-among-us
spec:
  ports:
  - port: 8080
    targetPort: http
    protocol: TCP
  selector:
    app: silence-among-us
