silence-among-us/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.priority: "10"
    cert-manager.io/cluster-issuer: le-production
  labels:
    app: silence-among-us
  name: silence-among-us
spec:
  rules:
    - host: au.cajun.pro
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: silence-among-us
                port:
                  name: http
  tls:
    - secretName: au-cajun-pro
      hosts: [au.cajun.pro]
